--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=C1123G1-Repo-BE
 spring.datasource.url=jdbc:mysql://localhost:3306/c1123g1_breeding_project?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=01666553995
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
